--- a/Unreal_Escape/Unreal_Escape.uproject
+++ b/Unreal_Escape/Unreal_Escape.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "Unreal_Escape",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	]
 }
